samples/_failures_safe/1761487957_eaa811_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2ed4d68.c: In function ‘main’:
./samples/SAFE/__tmp_e2ed4d68.c:169:5: error: expected expression at end of input
  169 |     int running =
      |     ^~~
./samples/SAFE/__tmp_e2ed4d68.c:169:5: error: expected declaration or statement at end of input
